--- a/src/sass/_first-card.scss
+++ b/src/sass/_first-card.scss
@@ -1,48 +1,58 @@
+// .first-card {
+// 	background: var(--violet);
+// 	margin: 2rem 0;
+// 	padding: 2rem;
+// 	color: var(--white);
+// 	border-radius: 9px;
+
+// 	&-user {
+// 		&-container {
+// 			display: flex;
+// 			align-items: center;
+// 			margin-bottom: 1rem;
+// 		}
+
+// 		&-img {
+// 			height: 2.4em;
+// 			width: 2.4rem;
+// 			border-radius: 50%;
+// 			margin-right: 1.2rem;
+// 			border: 2px solid var(--light-violet);
+// 		}
+
+// 		&-verified {
+// 			opacity: 50%;
+// 			font-size: 11px;
+// 		}
+// 	}
+
+// 	&-title {
+// 		&-container {
+// 			margin-bottom: 1rem;
+// 		}
+
+// 		&-text {
+// 			font-size: 1.65rem;
+// 		}
+// 	}
+
+// 	&-content {
+// 		&-text {
+// 			color: var(--light-gray);
+// 			font-weight: 500;
+// 			opacity: 75%;
+// 			font-size: 15px;
+// 			line-height: 1.5;
+// 		}
+// 	}
+// }
+
 .first-card {
-	background: var(--violet);
-	margin: 2rem 0;
-	padding: 2rem;
-	color: var(--white);
-	border-radius: 9px;
-
-	&-user {
-		&-container {
-			display: flex;
-			align-items: center;
-			margin-bottom: 1rem;
-		}
-
-		&-img {
-			height: 2.4em;
-			width: 2.4rem;
-			border-radius: 50%;
-			margin-right: 1.2rem;
-			border: 2px solid var(--light-violet);
-		}
-
-		&-verified {
-			opacity: 50%;
-			font-size: 11px;
-		}
-	}
-
-	&-title {
-		&-container {
-			margin-bottom: 1rem;
-		}
-
-		&-text {
-			font-size: 1.65rem;
-		}
-	}
-
-	&-content {
-		&-text {
-			color: var(--light-gray);
-			font-weight: 500;
-			opacity: 75%;
-			font-size: 15px;
-			line-height: 1.5;
-		}
-	}
+	@include card(
+		var(--violet),
+		var(--white),
+		var(--light-violet),
+		var(--light-gray),
+		15px
+	);
 }
