--- a/src/sass/mixins/_card.scss
+++ b/src/sass/mixins/_card.scss
@@ -10,6 +10,7 @@
 	padding: 2rem;
 	color: $textColor;
 	border-radius: 9px;
+	box-shadow: 0.4px 3px 7px rgba($grayish-blue, 0.2);
 
 	&-user {
 		&-container {
@@ -34,7 +35,7 @@
 
 	&-title {
 		&-container {
-			margin-bottom: 1rem;
+			margin-bottom: 1.2rem;
 		}
 
 		&-text {
