--- a/src/sass/mixins/_card.scss
+++ b/src/sass/mixins/_card.scss
@@ -3,14 +3,25 @@
 	$textColor,
 	$borderImgColor,
 	$secondTextColor,
-	$fontSize
+	$fontSize,
+	$gridArea,
+	$cardWidth,
+	$cardHeight
 ) {
 	background: $bgColor;
 	margin: 2rem 0;
 	padding: 2rem;
 	color: $textColor;
 	border-radius: 9px;
-	box-shadow: 0.4px 3px 7px rgba($grayish-blue, 0.2);
+	box-shadow: 1px 4px 9px rgba($grayish-blue, 0.4);
+
+	@media screen and (min-width: 1200px) {
+		grid-area: $gridArea;
+		margin: 0;
+		padding: 3rem;
+		height: $cardHeight;
+		width: $cardWidth;
+	}
 
 	&-user {
 		&-container {
@@ -25,11 +36,26 @@
 			border-radius: 50%;
 			margin-right: 1.2rem;
 			border: 2px solid $borderImgColor;
+
+			@media screen and (min-width: 1200px) {
+				height: 2.8rem;
+				width: 2.8rem;
+			}
+		}
+
+		&-name {
+			@media screen and (min-width: 1200px) {
+				font-size: 1.1rem;
+			}
 		}
 
 		&-verified {
 			opacity: 50%;
 			font-size: 11px;
+
+			@media screen and (min-width: 1200px) {
+				font-size: 1.1rem;
+			}
 		}
 	}
 
